[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
python-jose = "^3.3.0"
cryptography = "^37.0.2"
replit = "^3.2.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"